--- a/HTML/miki-type3.html
+++ b/HTML/miki-type3.html
@@ -200,38 +200,47 @@
 			    
 
 			    <div class="studentList m-t-15">
-					<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10"><button type="button" class="btn btn-success btn-xs btn-sm"><i class="fa fa-check"></i> Done </button></div>
+					<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10"><button type="button" class="btn btn-success btn-xs btn-sm"><i class="fa fa-check"></i> Next </button></div>
 					<div class="clearfix"></div>
 
-					<div class="parameters none">
-						<div class="tiles grey p-t-10 p-b-20 m-b-10">
-							<div class="row m-l-0 m-r-0 m-t-10 b-grey b-b">
-								<div class="col-md-4"><h4 class="semi-bold m-t-5 p-b-5">Posture</h4></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Confident</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Straight</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-info btn-sm btn-small h-center block">Slumped</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
+					<div id="eval-parameters" class="parameters none animated fadeIn" tabindex="1">
+						<div class="tiles grey p-t-10 p-b-10 m-b-10">
+							<div class="row m-l-0 m-r-0">
+								<div class="pull-right">
+									<span id="close-parameters" class="fa fa-times text-grey p-r-15 p-l-15 p-t-15 p-b-15 closeEval"></span>
+								</div>
+								<h3 class="text-center text-grey semi-bold">Evaluation for Student Name</h3>
 							</div>
 							<div class="row m-l-0 m-r-0 m-t-10 b-grey b-b">
-								<div class="col-md-4"><h4 class="semi-bold m-t-5 p-b-5">Behaviour</h4></div>
-								<div class="col-md-2"><button type="button" class="btn btn-info btn-sm btn-small h-center block">Polite</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Perky</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Bored</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
+								<div class="col-sm-4"><h4 class="semi-bold m-t-5 p-b-5">Posture</h4></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Confident</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Straight</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-primary btn-sm btn-small h-center block">Slumped</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
 							</div>
 							<div class="row m-l-0 m-r-0 m-t-10 b-grey b-b">
-								<div class="col-md-4"><h4 class="semi-bold m-t-5 p-b-5">Speech</h4></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Confident</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-info btn-sm btn-small h-center block">Straight</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Slumped</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
+								<div class="col-sm-4"><h4 class="semi-bold m-t-5 p-b-5">Behaviour</h4></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-primary btn-sm btn-small h-center block">Polite</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Perky</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Bored</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
 							</div>
 							<div class="row m-l-0 m-r-0 m-t-10 b-grey b-b">
-								<div class="col-md-4"><h4 class="semi-bold m-t-5 p-b-5">Confidence</h4></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Confident</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Straight</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Slumped</button></div>
-								<div class="col-md-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
+								<div class="col-sm-4"><h4 class="semi-bold m-t-5 p-b-5">Speech</h4></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Confident</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-primary btn-sm btn-small h-center block">Straight</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Slumped</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
+							</div>
+							<div class="row m-l-0 m-r-0 m-t-10 b-grey b-b">
+								<div class="col-sm-4"><h4 class="semi-bold m-t-5 p-b-5">Confidence</h4></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Confident</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Straight</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Slumped</button></div>
+								<div class="col-sm-2"><button type="button" class="btn btn-white btn-sm btn-small h-center block">Unprepared</button></div>
+							</div>
+							<div class="row m-r-0 m-l-0 p-t-10">
+								<button class="btn btn-info h-center block" id="saveEval">Save</button>
 							</div>
 						</div>
 					</div>
@@ -472,12 +481,28 @@
 	});
 
 	$( ".tiles.single" ).click(function() {
-	  $( this ).toggleClass( "selected" );
-	  $( ".parameters" ).slideToggle();
-	  $( ".tiles.single" ).toggleClass( "light" );
+		$( this ).toggleClass( "selected" );
+		$( ".parameters" ).slideToggle();
+		$( ".tiles.single" ).toggleClass( "light" );
+		$('html, body').animate({
+	    	scrollTop: $("#eval-parameters").offset().top
+	    }, 1000);
 	});
 
+	$( "#saveEval" ).click(function() {
+		$( ".selected .tiles" ).addClass( "blue" );
+		$( ".tiles.single" ).removeClass( "selected" );
+		$( ".tiles .blue .fa" ).removeClass( "fa-minus-circle" );
+		$( ".tiles .blue .fa" ).addClass( "fa-check-circle" );
+		$( ".parameters" ).slideToggle();
+		$( ".tiles.single" ).toggleClass( "light" );
+	});
 
+	$( ".closeEval" ).click(function() {
+		$( ".tiles.single" ).removeClass( "selected" );
+		$( ".parameters" ).slideToggle();
+		$( ".tiles.single" ).toggleClass( "light" );
+	});
 
 	$( document ).ready(function() {
 		var qTimer = $('div.cpTimer',window.parent.document);
