--- a/HTML/quiz-single.html
+++ b/HTML/quiz-single.html
@@ -139,7 +139,7 @@
 						<div class="bold small-text text-center p-t-10"> Quiz Time</div>
 						<div class="quizTimer"></div>
 						<div class="endQuiz b-grey b-t p-t-10 p-b-10">
-							<button type="button" id="question-done" class="btn btn-default block h-center"> End Quiz </button> 
+							<button type="button" id="question-done" class="btn btn-white block h-center"> End Quiz </button> 
 						</div>
 
 					</div>
