--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -13,6 +13,7 @@
 		<link href="/dev/css/app.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/listnav.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/panzer.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/panzerlist.css" rel="stylesheet" type="text/css">
 		<link href="/dev/css/jquery.mmenu.all.css" rel="stylesheet" type="text/css"/>
 
 
