--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -54,7 +54,7 @@
 	                    </div>
 	                </div>
 	            </div>
-			<div id="dialog-region"></div>
+			<div id="dialog-region" class="modal"></div>
 		</div>
 
 	<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
