--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -55,8 +55,8 @@
 	            </div>
 			<div id="dialog-region" class="modal"></div>
 		</div>
-	<!--<script type="text/javascript" src="/production/cordova-main.js"></script>-->
-	<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
-	 <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-global.js"></script>
+	<script type="text/javascript" src="/production/cordova-main.js"></script>
+	<!--<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
+	 <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-global.js"></script>--> 
 	</body>
 </html>
