quiz partially correct css

--- a/HTML/quiz-single.html
+++ b/HTML/quiz-single.html
@@ -159,7 +159,7 @@
 							    <li class="skip"><a href="#">1</a></li>
 							    <li class="right"><a href="#">2</a></li>
 							    <li class="current"><a href="#">3</a></li>
-							    <li><a href="#">4</a></li>
+							    <li class="partiallyCorrect"><a href="#">4</a></li>
 							    <li class="wrong"><a href="#">5</a></li>
 							    <li><a href="#">6</a></li>
 							    <li><a href="#">7</a></li>
@@ -203,7 +203,9 @@
 				<div class="well m-b-10 p-t-10 p-b-10 h-center quizActions"> 
 					<button type="button" id="question-done" class="btn btn-info pull-left"> <i class="fa fa-backward"></i> Previous </button> 
 					<button type="button" id="question-done" class="btn btn-success pull-right"> Submit <i class="fa fa-forward"></i> </button> 
-					<button type="button" id="question-done" class="btn btn-default btn-sm btn-small h-center block"> <i class="fa fa-refresh"></i> Skip </button> 
+					<div class="h-center block text-center">
+						<button type="button" id="question-done" class="btn btn-default btn-sm btn-small"> Skip <i class="fa fa-step-forward"></i> </button> <button type="button" id="question-done" class="btn btn-default btn-sm btn-small"> Skip <i class="fa fa-step-forward"></i> </button>
+					</div>
 					<div class="clearfix"></div>
 				</div>
 				
