--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -56,7 +56,7 @@
 			<div id="dialog-region"></div>
 		</div>
 	<!--<script type="text/javascript" src="/production/cordova-main.js"></script>-->
-	<script type="text/javascript" data-main="/dev/js/cordova-main" src="/dev/js/plugins/require.js"></script>
+	<script type="text/javascript" data-main="/dev/js/cordova-students-main" src="/dev/js/plugins/require.js"></script>
 	 <!-- <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-global.js"></script>  -->
 	</body>
 </html>
