--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta content="" name="description" />
 		<meta content="" name="author" />
+		<link href="/dev/css/nikhil.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
 		<link href="/dev/css/app.css" rel="stylesheet" type="text/css"/>
