--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -56,8 +56,8 @@
 				</div>
 			<div id="dialog-region"></div>
 		</div>
-	  <script type="text/javascript" src="/production/cordova-students-main.js"></script>
-	  <!-- // <script type="text/javascript" data-main="/dev/js/cordova-students-main" src="/dev/js/plugins/require.js"></script> -->
+	  <!--  <script type="text/javascript" src="/production/cordova-students-main.js"></script> -->
+	 	<script type="text/javascript" data-main="/dev/js/cordova-students-main" src="/dev/js/plugins/require.js"></script>
 	
 	</body>
 </html>
