--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -7,32 +7,32 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta content="" name="description" />
 		<meta content="" name="author" />
-		<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
-		<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/app.css" rel="stylesheet" type="text/css"/>
-		<link href="/dev/css/listnav.css" rel="stylesheet" type="text/css"/>
-		<link href="/dev/css/panzer.css" rel="stylesheet" type="text/css"/>
-		<link href="/dev/css/panzerlist.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/jquery.mmenu.all.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/select2.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/app.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/listnav.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/panzer.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/panzerlist.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/jquery.mmenu.all.css" rel="stylesheet" type="text/css"/>
 
 
-		<link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
-        <link href="/dev/css/bootstrap-timepicker.css" rel="stylesheet" type="text/css"/>
-		<link href="/dev/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
+		<link href="./dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
+        <link href="./dev/css/bootstrap-timepicker.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
 		
 		<!-- BEGIN CORE CSS FRAMEWORK -->
-		<link href="/dev/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-		<link href="/dev/css/font-awesome.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/animate.min.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/font-awesome.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/animate.min.css" rel="stylesheet" type="text/css">
 		<!-- END CORE CSS FRAMEWORK -->
 
 
 		<!-- BEGIN CSS TEMPLATE -->
-		<link href="/dev/css/style.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/responsive.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/custom-icon-set.css" rel="stylesheet" type="text/css">
-		<link href="/dev/css/custom.css" rel="stylesheet" type="text/css"/>
+		<link href="./dev/css/style.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/responsive.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/custom-icon-set.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/custom.css" rel="stylesheet" type="text/css"/>
 		<!-- END CSS TEMPLATE -->
 		
 
@@ -55,8 +55,9 @@
 	            </div>
 			<div id="dialog-region"></div>
 		</div>
-		
-	<!--<script type="text/javascript" src="/production/cordova-main.js"></script>-->
-	<script type="text/javascript" data-main="/dev/js/cordova-main" src="/dev/js/plugins/require.js"></script>
+	
+	<script type="text/javascript" src="../cordova.js"></script>
+	<!-- <script type="text/javascript" src="./production/cordova-main.js"></script> -->
+	<script type="text/javascript" data-main="./dev/js/cordova-main" src="./dev/js/plugins/require.js"></script>
 	</body>
 </html>
