--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -34,6 +34,10 @@
 		<link href="./dev/css/custom-icon-set.css" rel="stylesheet" type="text/css">
 		<link href="./dev/css/custom.css" rel="stylesheet" type="text/css"/>
 		<!-- END CSS TEMPLATE -->
+
+		<link href="./dev/css/fullScreenBookBlock/jquery.jscrollpane.custom.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/fullScreenBookBlock/bookblock.css" rel="stylesheet" type="text/css">
+		<link href="./dev/css/fullScreenBookBlock/custom.css" rel="stylesheet" type="text/css">
 		
 
 	</head>
