--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -18,6 +18,7 @@
 
 		<link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" type="text/css" href="dev/css/datetimepicker.css"/>
+		<link rel="stylesheet" type="text/css" href="dev/css/zebra.css"/>
         <link href="/dev/css/bootstrap-timepicker.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
 		
