summary report and multi filter textbooks

--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -16,8 +16,12 @@
 		<link href="/dev/css/jquery.mmenu.all.css" rel="stylesheet" type="text/css"/>
 
 
-		<link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
+		<!--link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/-->
 		<link rel="stylesheet" type="text/css" href="dev/css/datetimepicker.css"/>
+
+		<!--link rel="stylesheet" type="text/css" href="dev/css/style-multi.css"/-->
+		<link rel="stylesheet" type="text/css" href="dev/css/bootstrap-multiselect.css"/>
+
 		<link rel="stylesheet" type="text/css" href="dev/css/zebra.css"/>
         <link href="/dev/css/bootstrap-timepicker.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
